# coloc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  coloc.rviz  package.xml
bk/include/coloc/: AKAZE.hpp  FeatureDetector.hpp  InterfaceROS.hpp  KalmanFilter.hpp  Reconstructor.hpp  RobustMatcher.hpp  coloc.hpp  colocData.hpp  colocInterface.hpp  colocParams.hpp
bk/src/: CLATCH.cu  CUDAK2NN.cu
ceres/: autodiff_cost_function.h  autodiff_local_parameterization.h  c_api.h  ceres.h  conditioned_cost_function.h  cost_function.h  cost_function_to_functor.h  covariance.h  crs_matrix.h  cubic_interpolation.h  dynamic_autodiff_cost_function.h  dynamic_cost_function.h  dynamic_cost_function_to_functor.h  dynamic_numeric_diff_cost_function.h  gradient_checker.h  gradient_problem.h  gradient_problem_solver.h  iteration_callback.h  jet.h  local_parameterization.h  loss_function.h  normal_prior.h  numeric_diff_cost_function.h  ordered_groups.h  problem.h  sized_cost_function.h  solver.h  types.h
ceres/internal/: config.h  port.h
ceres/miniglog/glog/: logging.h
include/coloc/: CPUDetector.hpp  CPUMatcher.hpp  CUDAK2NN.h  CovIntersection.hpp  FeatureDetector.hpp  FeatureMatcher.hpp  GPUDetector.hpp  GPUMatcher.hpp  InterfaceDisk.hpp  InterfaceROS.hpp  KalmanFilter.hpp  Localizer.hpp  Reconstructor.hpp  Refiner.hpp  RobustMatcher.hpp  coloc.hpp  colocData.hpp  colocInterface.hpp  colocParams.hpp  colocUtils.hpp  logUtils.hpp  openMVG.h  rosUtils.hpp
matlab_utils/: CI.m  Tutorial.m  angleTest.m  covarianceIntersection.m  dataVis.m  ekf.m  exampleKF.m  filterColoc.m  fusionTest.m  kalmanFilter.m  parseFile.m  pitchAnalysis.sfit  quailKF.m  singleVehicleKF.m  yawAnalysis.sfit  yawTest.m
scripts/: localize.py  reconstruct.py
src/: CUDAK2NN.cu  CUDALERP.cu  ComputeFeatures.cpp  ComputeMatches.cpp  ImageListing.cpp  Localize.cpp  Localizer.cpp  Reconstruct.cpp  coloc.cpp  coloc.hpp  coloc_node.cpp  estimationKernel.hpp  featureDetector.hpp  featureMatcher.hpp  locTest.cpp  localizationData.hpp  localizationParams.hpp  localizationUtils.hpp  localizeImage.hpp  logUtils.hpp  mapBuilder.hpp  matplotlibcpp.h  plotUtils.hpp  plottest.cpp  poseRefiner.hpp  robustMatcher.hpp  stdafx.cpp  updateTest.cpp
src/dtmt/: CUDAK2NN  Makefile  main.cpp
src/localization/: CMakeLists.txt
src/reconstruction/: sfm.hpp
